--- a/electron-quick-start/css/ranui.css
+++ b/electron-quick-start/css/ranui.css
@@ -1,3 +1,21 @@
+/*
+$light: #f8f8f2;
+$lightgray: #828380;
+$gray1: #75715e;
+$gray2: #49483E;
+$gray3: #3e3d32;
+$dark: #272822;
+$red: #f92772;
+$purple: #be84ff;
+$green: #a6e22d;
+$yellow: #e6db74;
+$orange: #f6aa10;
+$blue: #66d9ef;
+
+$linkBlue: hsl(198, 49%, 46%);
+$hiGreen: hsl(70, 100%, 50%);
+*/
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -14,7 +32,7 @@ body {
   font-family: "Courier";
   font-family: "Menlo";
   font-size: 15px;
-  line-height: 22px;
+  line-height: 20px;
   white-space: nowrap;
   color: #f8f8f2;
   background-color: #272822;
@@ -31,18 +49,19 @@ body {
 
 doc, row {
   display: block;
+  border-radius: 3px;
 }
 tag, prop, val, txt {
   display: inline;
-  line-height: 11px;
+  line-height: 20px;
   white-space: pre-wrap;
-  padding: 0 calc(.5ch - 1px);
+  padding: 1px calc(.5ch - 1px);
   margin: 0 1px;
   border-radius: 2px;
 }
 
 doc {
-  padding: 0 2px;
+  padding: 0 0;
   background-image: linear-gradient(to left, #34332a 1px, transparent 1px);
   background-position: .8ch top;
   background-repeat: repeat-x;
@@ -61,21 +80,28 @@ prop {
 val {
   color: #e6db74;
 }
+prop + val::before {
+  content: ':';
+  font: inherit;
+  position: absolute;
+  margin-left: calc(-1ch + 1px);
+  color: #a6e22d;
+}
 
 
 /*TODO: Lol crazy indentation with css, need to make this with js or somehow smarter*/
-[tabs] {margin-left: 22ch;}
-[tabs="0"] {margin-left: 0ch}
-[tabs="1"] {margin-left: 2ch}
-[tabs="2"] {margin-left: 4ch}
-[tabs="3"] {margin-left: 6ch}
-[tabs="4"] {margin-left: 8ch}
-[tabs="5"] {margin-left: 10ch}
-[tabs="6"] {margin-left: 12ch}
-[tabs="7"] {margin-left: 14ch}
-[tabs="8"] {margin-left: 16ch}
-[tabs="9"] {margin-left: 18ch}
-[tabs="10"] {margin-left: 20ch}
+[tabs] {padding-left: 22ch;}
+[tabs="0"] {padding-left: 0ch}
+[tabs="1"] {padding-left: 2ch}
+[tabs="2"] {padding-left: 4ch}
+[tabs="3"] {padding-left: 6ch}
+[tabs="4"] {padding-left: 8ch}
+[tabs="5"] {padding-left: 10ch}
+[tabs="6"] {padding-left: 12ch}
+[tabs="7"] {padding-left: 14ch}
+[tabs="8"] {padding-left: 16ch}
+[tabs="9"] {padding-left: 18ch}
+[tabs="10"] {padding-left: 20ch}
 
 [tabs="0"] + :-webkit-any([tabs="2"],[tabs="3"],[tabs="4"],[tabs="5"],[tabs="6"],[tabs="7"],[tabs="8"],[tabs="9"],[tabs="10"]),
 [tabs="1"] + :-webkit-any([tabs="3"],[tabs="4"],[tabs="5"],[tabs="6"],[tabs="7"],[tabs="8"],[tabs="9"],[tabs="10"]),
@@ -103,21 +129,15 @@ val {
 
 
 .sel {
-  //outline: 1px solid #0af;
-  //background: #49483E;
-  //color: white;
-  //background: #0af;
-  background: hsla(200, 100%, 30%, 1);
   background: #49483E;
+  box-shadow: inset 0px 0px 0px 1px #828380;
 }
 .cur {
-  //outline: 1px solid #828380; //#66d9ef; //#0af;
-  //outline-offset: -1px;
   box-shadow: inset 0px 0px 0px 1px #828380;
 }
 .hilite {
-  //background: hsla();
-  //background: #3e3d32;
+  background: #49483E;
+  //box-shadow: inset 0px 0px 0px 1px #828380;
 }
 .hilite + row::before {
   //Show insertion point somehow? Or is it enough that users learn it as they create new elements
@@ -129,9 +149,52 @@ val {
   opacity: .66;
 }
 
-[contenteditable="true"] {
+[contenteditable="true"],
+.clone {
   color: #272822;
   background-color: white;
-  box-shadow: 0px 0px 0px 1px white;
-  //border-radius: 3px;
+  box-shadow: inset 0px 0px 0px 1px white;
+}
+
+.dragsource {
+  opacity: .1;
+}
+.dragghost {
+  display: inline-block;
+  transform: scale(1.1);
+  opacity: .7;
+}
+
+.dropbefore,
+.dropafter {
+  position: relative;
+}
+.dropbefore::after,
+.dropafter::after {
+  content: '';
+  position: absolute;
+  display: block;
+  z-index: 100;
+  top: 5px;
+  left: -.5ch;
+  width: 1ch;
+  border-radius: 1ch;
+  height: 10px;
+  background: #66d9ef;
+}
+.dropafter::after {
+  left: auto;
+  right: -.5ch;
+}
+row.dropbefore::after,
+row.dropafter::after {
+  top: -2px;
+  left: auto;
+  right: auto;
+  width: 100%;
+  height: 4px;
+}
+row.dropafter::after {
+  top: auto;
+  bottom: -2px;
 }
